2001-08-29  Akim Demaille  <akim@epita.fr>

	* Makefile.maint (do-po-update): Wget refuses to overwrite files:
	download in a tmp dir.

2001-08-29  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4: s/AT-devnull/devnull/ since there are
	case insensitive OSes out there :(
	From Tim Van Holder.

2001-08-29  Akim Demaille  <akim@epita.fr>

	* lib/autom4te.in: New.
	* lib/Makefile.am (edit, autom4te.cfg): New.
	* bin/autom4te.in (BEGIN): Simplify.
	Rely on `AC_MACRODIR' in addition of `autom4te_perllibdir'.
	(&load_configuration): New.  Use it.
	(&parse_args): Support --mode, --set, and --melt.
	* bin/autoconf.in: Simplify and adjust.
	* tests/Makefile.am (AUTOMAKE): Use --set.
	* tests/atlocal.in: Adjust.
	* BUGS: distcheck and check are weak.

2001-08-29  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4: Use
		foo=`(command) 2>/dev/null`
	not
		foo=`command` 2>/dev/null
	(at-devnull): Rename as...
	(AT-devnull): this.
	(--clean): Remove AT-* files too.
	* doc/autoconf.texi (Limitations of Usual Tools): Document `date'.
	Reported by Nicolas Joly.

2001-08-28  Akim Demaille  <akim@epita.fr>

	* lib/autoconf/general.m4 (_AC_INIT_PREPARE): Don't use single
	quotes inside single quotes.
	Reported by Nicolas Joly.

2001-08-28  Kevin Ryde  <user42@zip.com.au>

	* doc/autoconf.texi (Function Portability): Mention C right shifts.

2001-08-27  Tim Van Holder  <tim.van.holder@pandora.be>

	* lib/autotest/general.m4: Reword some messages.
	(AT_INIT): Check for the `times' builtin before using it.
	Support test ranges as arguments to the testsuite.
	Have -e imply -d as the help text suggested.

2001-08-27  Akim Demaille  <akim@epita.fr>

	* Makefile.maint: Formatting changes.
	(do-po-update, po-update, cvs-update, update): New targets.
	(AMTAR): Remove.

2001-08-27  Akim Demaille  <akim@epita.fr>

	* lib/autotest/general.m4 (AT_INIT) <at_cmd_line>: Remove.
	<at_cmd_line>: New.
	Pass it to debug-*.sh scripts.
	<AUTOTEST_PATH>: May contain absolute dir names.
