@@ -31,7 +31,7 @@ AT_SETUP([AC_REQUIRE: topological sort])
 AT_DATA([configure.ac],
 [[define([REQUIRE_AND_CHECK],
 [AC_REQUIRE([$1])
-test -z "$m4@__@_translit([$1], [A-Z], [a-z])" && AS_EXIT(1)])
+test -z "$m4@&t@_translit([$1], [A-Z], [a-z])" && AS_EXIT(1)])
 
 AC_DEFUN([TEST1],
 [REQUIRE_AND_CHECK([TEST2a])
